duhoe: tolist->collect